# 3ds-rs

./: Cargo.toml  PLAN.md
.github/workflows/: ci.yml
src/: chunk.rs  convert.rs  geometry.rs  lib.rs
tests/: parse.rs
tests/fixtures/: simple_cube.3ds
