[package]
name = "ds3"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <you@example.com>"]
description = "Pure-Rust parser for Autodesk 3D Studio (.3ds) binary files"
keywords = ["3ds", "3d-studio", "parser", "mesh", "geometry"]
categories = ["parser-implementations", "rendering::data-formats"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/ds3"
readme = "README.md"

[dependencies]
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
std = ["thiserror/std", "serde?/std"]
serde = ["dep:serde"]

[dev-dependencies]
